# demo-invest-plugin

./: README.md  pyproject.toml
src/invest_demo_plugin/: __init__.py  foo.py
src/natcap/invest/: foo.py
