[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-demo-plugin"
version = "0.0.1"
dependencies = [
  "taskgraph", 
  "pygeoprocessing", 
  # "natcap.invest @ git+https://github.com/natcap/invest.git@feature/plugins"
]

[tool.natcap.invest]
# This is the plugin API version that this plugin uses
# invest uses this to determine whether it can run this plugin
# "v1" is the current and only version at this time
api_version = "v1"

package_name = "invest_demo_plugin"

# User-facing name of the plugin model that will be displayed in the workbench
# Style guidelines:
# - Capitalize using title case
# - Use as short of a phrase as possible while still being unique
# - Avoid redundant, unnecessary words such as "InVEST", "Model"
model_title = "Demo Plugin"  

# Model identifier used internally by invest
# Style guidelines:
# - Use snake case. A snake-cased version of the model_title is often a good choice
# - Abbreviations are okay for long names (e.g. sdr)
# - Avoid redundant, unnecessary words such as "invest", "model"
# - Do not use a model_id that is already used by any core invest model
# - This identifier should be unique. The workbench cannot have multiple plugins with the 
#   same model_id installed at the same time.
model_id = "demo"

# List of conda dependencies to install into the plugin's conda env 
# Only include dependencies that cannot be specified in project.dependencies because 
# they are not available thru pip. Usually this is only python itself, and any 
# non-python dependencies like the GDAL binaries.
#
# Python is installed into the plugin environment by default, but you may 
# include it here if you wish to specify a particular version
conda_dependencies = [
  "python==3.13",  
  "gdal", 
  "geotiff>=1.7.3"  # earlier versions don't support space in CONDA_PREFIX
]

[tool.setuptools.package-data]
# Use this to include any non-python files in your package distribution,
# such as sample data, or a non-python executable
foo = ["data/foo"]
