[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-demo-plugin"
version = "0.0.1"
dependencies = [
  "pygeoprocessing", 
  "taskgraph",
  "natcap.invest>=3.16.0a1"
]

[tool.natcap.invest]
# This is the plugin API version that this plugin uses
# invest uses this to determine whether it can run this plugin
# "v1" is the current and only version at this time
api_version = "v1"

package_name = "invest_demo_plugin"

# List of conda dependencies to install into the plugin's conda env 
# Only include dependencies that cannot be specified in project.dependencies because 
# they are not available thru pip. Usually this is only python itself, and any 
# non-python dependencies like the GDAL binaries.
#
# Python is installed into the plugin environment by default, but you may 
# include it here if you wish to specify a particular version
conda_dependencies = [
  "python==3.13",  
  "gdal<3.11",  # missing libgdal.so issue happened with gdal 3.11
  "geotiff>=1.7.3"  # earlier versions don't support space in CONDA_PREFIX
]

[tool.setuptools.package-data]
# Use this to include any non-python files in your package distribution,
# such as sample data, or a non-python executable
foo = ["data/foo"]
